--- a/src/App.css
+++ b/src/App.css
@@ -30,12 +30,14 @@
   align-items: center;
   justify-content: center;
 }
-.city {
-  width: 25%;
+.accordion > .card .card-header,
+.card-body {
   padding: 10px;
-  box-shadow: 1px 1px 3px #444;
-  margin: 10px;
-  min-height: 30vh;
+  /* box-shadow: 1px 1px 3px #444;*/
+  margin-left: 10px;
+  margin-left: 10px;
+
+  background-color: #fff;
 }
 button {
   text-transform: uppercase;
@@ -69,7 +71,18 @@ form input:hover {
   background-color: #282c3450;
   color: white;
 }
-.city span {
+span {
   color: brown;
   font-weight: 400;
 }
+h6:hover {
+  color: brown;
+}
+.accordion {
+  width: 60%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+/*  https://api.openaq.org/v1/measurements?country=${country}&parameter=${pollution}&order_by[]=value&sort=desc&limit=10`
+https://en.wikipedia.org/w/api.php?action=query&format=json&prop=extracts&titles=Albert%20Einstein*/
